[package]
name = "scheduler"
version = "0.1.0"
edition = "2021"
description = "A non-blocking task scheduler for Rust with fluent API"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/cploutarchou/scheduler"
repository = "https://github.com/cploutarchou/scheduler"
documentation = "https://docs.rs/scheduler"
keywords = ["scheduler", "task", "async", "job", "tokio"]
categories = ["asynchronous", "date-and-time", "concurrency"]
authors = ["Christos Ploutarchou <cploutarchou@gmail.com>"]

[lib]
name = "scheduler"
path = "src/lib.rs"

[features]
default = []
rabbitmq = ["lapin"]
kafka = [] # Add kafka dependency when implementing

[dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.4", features = ["v4", "serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging and tracing
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async utilities
futures = "0.3"
async-trait = "0.1"
tokio-util = "0.7"

# Message Queue - optional
lapin = { version = "2.1", optional = true }  # RabbitMQ client

# Utils
once_cell = "1.18"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.11"
pretty_assertions = "1.0"
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "scheduler_benchmarks"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'unwind'
debug = false
strip = true

[profile.dev]
opt-level = 0
debug = true
